# src/routes/prosperity.hub.routes.ts
@@ -20,13 +20,12 @@ import { requireUser } from '../middleware/requireUser';
 
 const prosperityHubrouter = express.Router();
 
-const base = ""
+const base = "/api/prosperity-hub"
 
-prosperityHubrouter.post(base+'/create', auth, requireUser, validate(createProsperityHubSchema), createProsperityHubHandler);
+prosperityHubrouter.post(base+'/create', validate(createProsperityHubSchema), auth, requireUser, createProsperityHubHandler);
 prosperityHubrouter.get(base+'/get', auth, getProsperityHubsHandler);
-prosperityHubrouter.get(base+'/:id', auth, getProsperityHubHandler);
+prosperityHubrouter.get(base+'/get/:id', auth, getProsperityHubHandler);
 prosperityHubrouter.patch(base+'/update/:id', validate(updateProsperityHubSchema), auth, updateProsperityHubHandler );
-prosperityHubrouter.delete(base+'/delete/:id', auth, deleteProsperityHubHandler);
-// prosperityHubrouter.delete(base+'/delete/id', auth, adminAuth, deleteProsperityHubHandler);
+prosperityHubrouter.delete(base+'/delete/:id', auth, adminAuth, deleteProsperityHubHandler);
 
 export default prosperityHubrouter;
